<resources>
    <string name="action_settings">退出登录</string>
    <string name="app_name">12306订餐系统</string>
    <string name="app_title">12306订餐</string>
    <string name="app_title_">送餐系统</string>
    <string name="tasks_main">任务列表</string>
    <string name="task_detail">任务详情</string>
    <string name="tasks_trace">变更信息</string>
    <string name="tasks_msg">消息列表</string>

    <string name="prompt_email">工号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">工号格式错误</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="loading_message">正在加载，请稍后...</string>
    <string name="loading_title">提示</string>

    <string name="action_yes">确定</string>
    <string name="action_no">取消</string>
    <string name="logout_title">退出登录</string>
    <string name="logout_message">确认退出登录？</string>

    <string name="startSend_title">开始送餐</string>
    <string name="startSend_message">确认开始送餐</string>

    <string name="signTask_title">收到任务</string>
    <string name="signTask_message">确认收到任务</string>

    <string name="endSend_title">结束送餐</string>
    <string name="endSend_message">确认送餐结束</string>



    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
